# ticktack

./: .gitignore  CMakeLists.txt  README.md  ticktack.sublime-project  vcpkg.json
include/ticktack/: fixed_stack.h  tt.h
src/: main.cpp  tt.cpp
tests/: CMakeLists.txt  fixed_stack_tests.cpp  tt_tests.cpp
